testsuite/tests/typecheck/should_fail/tcfail011.alan
foo() : proc
  a : int [-15];
  b : int [-1000000000000000];
  c : int [0];
  d : int [10000000000000000];
{
  return;
}
